# Carbonize

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  COMMERCIAL-LICENSING.md  LICENSE  Makefile  README.md  SECURITY.md  TRADEMARKS.md  carbonlattice_decarbonization_pitch (1).html  carbonlattice_decarbonization_pitch.html  commit_script.ps1  numerical_validation_report.html  package-lock.json  package.json  pnpm-lock.yaml  pre_development_master_plan.md  pyproject.toml  system_digital_twin.html
.devcontainer/: devcontainer.json
.github/: CLA.yml  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  research_science.md  security.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml  nightly.yml  no-html-prototypes.yml  release.yml  uq-components.yml
Carbonize Documents/: CMBSG_Verification_Report.md  CarbonLattice_Expanded_Contact_List.md  CarbonLattice_Outreach_Playbook.md  CarbonLattice_Startup_Fundraising_Roadmap.md  technical_document_portal.html  technical_manual.html
archive/: README.md
archive/biomimetic_sim/: docker-compose.yml
archive/biomimetic_sim/api/: dependencies.py
archive/biomimetic_sim/api/routes/: plants.py
archive/biomimetic_sim/core/: economic_engine.py  kinetics.py  mass_balance.py  validators.py
archive/biomimetic_sim/database/: connection.py
archive/biomimetic_sim/frontend/: package.json
archive/biomimetic_sim/frontend/src/components/: SimulationDashboard.tsx
archive/biomimetic_sim/frontend/src/hooks/: usePollingSimulation.ts
archive/biomimetic_sim/ml/: bayesian_optimizer.py
archive/biomimetic_sim/tests/: test_kinetics.py  test_mass_balance.py
archive/biomimetic_sim/workers/: report_generator.py
biomimetic_sim/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
biomimetic_sim/api/: main.py
biomimetic_sim/api/routes/: simulations.py
biomimetic_sim/core/: block_strength.py  config.py  wiener_process.py
biomimetic_sim/frontend/src/components/: ComplianceBadge.tsx  FinancialChart.tsx  PlantForm.tsx
biomimetic_sim/ml/: surrogate_model.py
biomimetic_sim/tests/: test_design.py  test_ml.py  test_uq.py
business/market/: buyer-list.csv  market-sizing-note.md
business/regulatory/: ccts-pathway.md  citations.json
business/vendor-quotes/: capex-validation.md
cla/: entity-cla.md  individual-cla.md
data/bench_data/CE-1/processed/: ca_kinetics_bench.csv  ca_rates.csv
data/bench_data/CE-2/processed/: metal_sorption_bench.csv
data/bench_data/CE-3/processed/: caco3_precipitation_bench.csv
data/bench_data/CE-4/processed/: multi_gas_bench.csv
data/bench_data/CE-5/processed/: formulation_screen_bench.csv
data/parameters/: batch_calibration_summary.md  diff_2026.1_to_v2026.2.json  inventory.csv  provenance.md  v2026.1.json  v2026.2.json
data/parameters/citations/: CE-1_protocol.md  CE-2_protocol.md  bibliography.md  references.bib
deploy/: docker-compose.dev.yml  docker-compose.yml
deploy/docker/: api.Dockerfile  nginx.conf  sim-core.Dockerfile  web.Dockerfile  worker.Dockerfile
deploy/docker/base/: python-base.Dockerfile
deploy/grafana/dashboards/: api-performance.json  business-kpis.json  celery-queue.json
deploy/grafana/provisioning/: alerting.yml  dashboards.yml  datasources.yml
deploy/postgres/: init.sql
deploy/prometheus/: prometheus.yml
deploy/scripts/: dev.sh  prod-validate.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
docs/: roadmap.md
docs/adr/: 0001-record-architecture-decisions.md  template.md
docs/architecture/: file-structure.md  shared-schema.md  websocket-protocol.md  ws-schema.json
docs/design/: IA-decisions-rationale.md  component-inventory.md  data-requirements-matrix.md  information-architecture.md
docs/design/wireframes/: executive-dashboard.md  operator-dcs.md
docs/legal/: IP-POLICY.md
docs/project/: outreach_templates.md  partnership_strategy.md  pr-audit-2026-q1.md  risk_acknowledgment.md
hardware/: README.md  bom.csv  calibration-schedule.xlsx  corrosion-test-protocol.md  daq-architecture.md  materials-spec.md  sensor-procurement-list.csv  sensor-stack.md  software-calibration-scheduler.md  software-corrosion-test-pipeline.md  software-daq-edge-cloud.md  software-lifecycle-tracking.md  software-sensor-integration.md
manuscript/: manuscript.md
manuscript/theory/: CHANGELOG.md  stochastic_modeling_v1.0.md
pre_development/: core_features_reference.md  final_checklists_and_verification.md  funding_proposals_framework.md  github_repository_configuration.md  intellectual_property_declaration.md  job_description_process_engineer.md  modules_and_functions_registry.md  mou_templates.md  patent_p1_specification.md  simulation_services_implementation.md  simulation_software_architecture.md  simulation_software_design_principles.md  simulation_software_engineering_principles_and_guidelines.md  simulation_software_file_structure.md  simulation_software_pipeline.md  simulation_software_ui_and_visualizations.md  simulation_software_workflow.md  technology_stack_definition.md  test_suite.md
pre_development/deliverables/: annotated_bibliography.md  laboratory_sops.md  patent_ipo_template.tex  technical_datasheet.md
scripts/: calibrate.py  generate_ws_schema.py  run_all_calibrations.py
scripts/calibration/: __init__.py  comparator.py  fitters.py  io.py  models.py  provenance_updater.py  report.py  uncertainty.py  updater.py  uq_runner.py
scripts/setup/: setup-precommit.sh
