[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cbms-platform"
version = "1.0.0"
description = "Coral-inspired biomineralization multi-pollutant capture simulator monorepo"
authors = ["CarbonLattice Team"]
readme = "README.md"
packages = [
    { include = "cbms_shared", from = "packages/shared/src" },
    { include = "cbms_sim", from = "packages/sim-core/src" },
    { include = "cbms_api", from = "packages/api/src" },
    { include = "cbms_workers", from = "packages/workers/src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.110.0"
uvicorn = ">=0.28.0"
sqlalchemy = { version = ">=2.0.28", extras = ["asyncio"] }
asyncpg = ">=0.29.0"
pydantic = ">=2.6.0"
scipy = ">=1.12.0"
numpy = ">=1.26.0"
numba = ">=0.59.0"
celery = ">=5.3.6"
redis = ">=5.0.3"
reportlab = ">=4.1.0"
scikit-learn = ">=1.4.0"
optuna = ">=3.6.0"
structlog = ">=24.1.0"
slowapi = ">=0.1.9"
python-jose = { version = ">=3.3.0", extras = ["cryptography"] }
passlib = { version = ">=1.7.4", extras = ["bcrypt"] }
bcrypt = ">=4.1.2"
psutil = ">=5.9.8"
pyotp = ">=2.9.0"
pydantic-settings = ">=2.2.0"
email-validator = ">=2.0.0"
prometheus-client = ">=0.20.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
httpx = ">=0.27.0"
aiosqlite = ">=0.20.0"
hypothesis = ">=6.0.0"
ruff = ">=0.3.0"
black = ">=24.2.0"
mypy = ">=1.8.0"
bandit = ">=1.7.7"

[tool.pytest.ini_options]
testpaths = ["packages/sim-core/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "bench_*.py"]
markers = [
    "slow: slow integration or performance benchmark tests",
    "benchmark: performance benchmark tests"
]
pythonpath = [
    "packages/shared/src",
    "packages/sim-core/src",
    "packages/sim-core/src/cbms_sim",
    "packages/sim-core/src/cbms_sim/core",
    "packages/sim-core/src/cbms_sim/ml",
    "packages/api/src",
    "packages/api/src/cbms_api",
    "packages/api/src/cbms_api/api",
    "packages/workers/src",
    "packages/workers/src/cbms_workers",
    "packages/workers/src/cbms_workers/workers"
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "*/migrations/*",
    "*/node_modules/*",
    "build/*",
    "dist/*",
    ".venv/*",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports)
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "ARG",  # unused arguments
    "PTH",  # use pathlib
    "ERA",  # eradicate commented-out code
    "PL",   # pylint
    "TRY",  # tryceratops
    "RUF",  # ruff-specific
]

ignore = [
    "PLR0913",  # too many arguments (sometimes necessary)
    "PLR2004",  # magic value (when intentional)
    "TRY003",   # long messages outside exception class
]

fixable = ["ALL"]
unfixable = ["B", "F"]  # Don't auto-fix bugs

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",  # magic value in tests is OK
    "S101",     # assert is OK in tests
    "ARG001",   # unused function arg in fixtures
    "PLR0915",  # too many statements in test
]
"__init__.py" = ["F401"]  # unused imports in __init__ is OK
"**/migrations/*" = ["N999"]  # alembic special names
"**/kernels.py" = ["TID252"]  # Numba functions can have unusual patterns

[tool.ruff.lint.isort]
known-first-party = ["cbms_sim", "cbms_api", "cbms_workers", "cbms_cfd", "cbms_shared"]
known-third-party = ["numpy", "scipy", "pandas", "fastapi", "sqlalchemy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
source = ["packages/sim-core/src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "*/kernels.py",
    "*/cbms_sim/core/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@njit",
    "@njit\\(cache=True\\)",
    "@njit\\(cache=True, fastmath=True\\)",
    "pass",
    "\\.\\.\\.",
]
fail_under = 90
show_missing = true
skip_empty = true
precision = 1

