[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomimetic_sim"
version = "1.0.0"
description = "Biomimetic Industrial Simulation Platform for Biomineralization Carbon Capture Retrofits"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "numba>=0.59.0",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "reportlab>=4.1.0",
    "scikit-learn>=1.4.0",
    "optuna>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
